--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.4.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
