--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.13.5",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
