--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.7",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.3",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.5",
     "input-otp": "^1.4.1",
